--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   drupal:
-    image: drupal
+    image: drupal:9.4.8-php8.1-apache
     restart: always
     ports:
       - "8080:80"
@@ -21,23 +21,13 @@ services:
   mariadb:
     image: mariadb
     restart: always
-    environment:
+    environment:x
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: drupal
       MYSQL_USER: drupal
       MYSQL_PASSWORD: drupal
     volumes:
       - mariadb-data:/var/lib/mysql
-    networks:
-      - network
-
-  haproxy:
-    image: haproxy
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     networks:
       - network
 
